# the-splitwise-mcp

./: .env.example  .gitignore  README.md  debug_audio.py  package.json  pyproject.toml  run_agent.py  smithery.json  smithery.yaml
src/splitwise_mcp/: client.py  server.py  sse.py  web_api.py
src/splitwise_mcp/agent/: audio.py  client.py
tests/: test_logic.py
